# benchmark-scaluq

./: .gitignore  Dockerfile  Dockerfile.batch  Dockerfile.cu11  Dockerfile.cu12  README.md  build_run_container.sh  flake.nix  plot.py  test.py
.devcontainer/: devcontainer.json
benchmark/Roger-luo/gpu/pennylane/: benchmark.py
benchmark/Roger-luo/gpu/qiskit/: benchmark.py
benchmark/Roger-luo/gpu/qulacs/: benchmark.py
benchmark/Roger-luo/gpu/scaluq/: f32.py  f64.py
benchmark/Roger-luo/multithread/qiskit/: benchmark.py
benchmark/Roger-luo/multithread/qulacs/: benchmark.py
benchmark/Roger-luo/multithread/scaluq/: f32.py
benchmark/Roger-luo/singlethread/qiskit/: benchmark.py
benchmark/Roger-luo/singlethread/qulacs/: benchmark.py
benchmark/Roger-luo/singlethread/scaluq/: f64.py
benchmark/batch/: CMakeLists.txt  Scaluq.cpp  Scaluq.py  Scaluq_two_bench.cpp  a  build_Scaluq.sh  build_cuStateVec.sh  build_scaluq.sh  cuStateVec  cuStateVec.cu  plot_batch_sweep.py  plot_qubits_sweep.py  run_batch_sweep.sh  run_container.sh  run_qubits_sweep.sh  sample.cu  test_cuStateVec.cu  test_scaluq.cpp
benchmark/multiple-gate/gpu/: execall.sh  plot.py
benchmark/multiple-gate/gpu/custatevec/: f64.py
benchmark/multiple-gate/gpu/qiskit-aer/: f64.json  f64.py
benchmark/multiple-gate/gpu/qiskit-aer-custatevec/: f64.json  f64.py
benchmark/multiple-gate/gpu/qulacs/: f64.json  f64.py
benchmark/multiple-gate/gpu/scaluq/: f64.json  f64.py
benchmark/multiple-gate/multithread/: Dockerfile  execall.sh  plot.py
benchmark/multiple-gate/multithread/qiskit-aer/: f64.py
benchmark/multiple-gate/multithread/qulacs/: exec.sh  f64.py
benchmark/multiple-gate/multithread/scaluq/: f64.py
benchmark/single-gate/: Dockerfile  flake.nix
benchmark/single-gate/gpu/: Dockerfile  execall.sh  plot.py
benchmark/single-gate/gpu/custatevec/: exec.sh  f16.py  f32.py  f64.py
benchmark/single-gate/gpu/custatevec-empty/: exec.sh  f64.py
benchmark/single-gate/gpu/qiskit-aer/: alloc.py  exec.sh  f32.py  f64.py  run.py
benchmark/single-gate/gpu/qiskit-aer-custatevec/: exec.sh  f32.py  f64.py  res.txt  run.py
benchmark/single-gate/gpu/qiskit-aer-custatevec-empty/: f64.py
benchmark/single-gate/gpu/qiskit-aer-empty/: exec.sh  f64.py
benchmark/single-gate/gpu/quest/: exec.sh  run.py
benchmark/single-gate/gpu/qulacs/: exec.sh  f64.py  run.py
benchmark/single-gate/gpu/qulacs-empty/: run.py
benchmark/single-gate/gpu/scaluq/: bf16.py  f16.py  f32.py  f64.py
benchmark/single-gate/gpu/scaluq-empty/: bf16.py  exec.sh  f16.py  f32.py  f64.py
benchmark/single-gate/multithread/: Dockerfile  execall.sh  plot.py
benchmark/single-gate/multithread/project-q/: f64.py
benchmark/single-gate/multithread/qiskit-aer/: alloc_pined.py  expr.py  f64.py  run.py
benchmark/single-gate/multithread/qulacs/: exec.sh  f64.py  run.py
benchmark/single-gate/multithread/scaluq/: bf16.py  exec.sh  f16.py  f32.py  f64.py
benchmark/single-gate/singlethread/: Dockerfile  execall.sh  plot.py
benchmark/single-gate/singlethread/qiskit-aer/: exec.sh  f64.py
benchmark/single-gate/singlethread/quest/: run.py
benchmark/single-gate/singlethread/scaluq/: bf16.py  exec.sh  f64.py
